--- a/styles.css
+++ b/styles.css
@@ -65,16 +65,18 @@
     background-color: #1e1e1e;
     position: relative;
     overflow: hidden;
+    z-index: 1; /* Keeps the text above the video */
   }
 
   #hero video {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    pointer-events: none;
+    object-fit: cover; /* Ensures the video covers the entire background */
+    z-index: -1; /* Sends the video behind the text */
   }
   
   #hero h1 {
@@ -104,6 +106,7 @@
   /* Featured Products */
   #featured-products {
     max-width: 1200px;
+
     margin: 4rem auto;
     padding: 0 2rem;
     background-color: #1e1e1e;
@@ -111,8 +114,10 @@
   
   #featured-products h2 {
     text-align: center;
+    margin-top: 50px;
     margin-bottom: 2rem;
     font-size: 2rem;
+    padding-top: 30px;
   }
   
   .product-grid {
@@ -126,13 +131,14 @@
   .product-card {
     flex: 0 0 auto;
     width: 350px;
-    height: 450px;
+    height: 400px;
     background-color: #989898ad;
-    border: 2px solid rgb(71, 20, 20);
-    border-radius: 5px;
+    border: 4px solid rgb(180, 103, 103);
+    border-radius: 20px;
     padding: 10px;
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 20px;
   }
   
   .scroll-button {
