--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,29 @@
   }
   
   /* Header and Navigation */
+ /* Header and Navigation */
+
+.logo {
+    color: black;
+}
+
+.navbar {
+    color: black;
+    text-decoration: underline;
+}
+
+.navbar:hover {
+    color: #ff0000;
+    font-size: 20px;
+    transition: all;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+}
+
   header {
-    background-color: #000000;
+    background-color: #EDDFE0;
     padding: 25px;
   }
-  
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
   .logo {
     font-size: 1.5rem;
     font-weight: bold;
