--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,13 @@
 .logo {
     color: black;
 }
-
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 .navbar {
     color: black;
     text-decoration: underline;
